--- a/less/bootstrap/bootstrap.less
+++ b/less/bootstrap/bootstrap.less
@@ -1,5 +1,8 @@
 // Core variables and mixins
-@import "variables.less";
+
+//@import "variables.less";
+@import "../soleclub/variables";
+@import "../soleclub/theme";
 @import "mixins.less";
 
 // Reset and dependencies
