--- a/less/modules/composer-default.less
+++ b/less/modules/composer-default.less
@@ -5,12 +5,26 @@
 		p {
 			margin: 0 0 18px;
 		}
-		
+
 		blockquote {
 			font-size: 12px;
-			
+
 			p {
 				margin-bottom: 0px;
+			}
+		}
+	}
+
+	.title-container{
+		.title{
+			border-bottom: 1px solid @brand-primary !important;
+		}
+	}
+	.tags-container{
+		.bootstrap-tagsinput{
+			input{
+				border-bottom: 1px solid @brand-primary !important;
+				.placeholder();
 			}
 		}
 	}
