--- a/less/soleclub.less
+++ b/less/soleclub.less
@@ -29,7 +29,7 @@
 @import "modules/usercard";
 @import "modules/taskbar";
 @import "modules/alerts";
-@import "modules/embed";
+@import "modules/amp";
 @import "modules/fab";
 @import "modules/morph";
 @import "modules/composer-default";
@@ -37,8 +37,8 @@
 @import "modules/bottom-sheet";
 
 
-@material-primary:         @brand-primary; //#337ab7;
-@material-success:         @brand-success; //#4CAF50;
-@material-info:            @brand-info; //#717484;
-@material-warning:         @brand-warning; //#ff6d00;
-@material-danger:          @brand-danger; //#F44336;
+@material-primary:         #337ab7;
+@material-success:         #4CAF50;
+@material-info:            #717484;
+@material-warning:         #ff6d00;
+@material-danger:          #F44336;
