--- a/less/bootstrap/navbar.less
+++ b/less/bootstrap/navbar.less
@@ -10,7 +10,7 @@
 
 .navbar {
   position: relative;
-  min-height: @navbar-height; // Ensure a navbar always shows (e.g., without a .navbar-brand in collapsed mode)
+  height: @navbar-height; // Ensure a navbar always shows (e.g., without a .navbar-brand in collapsed mode)
   margin-bottom: @navbar-margin-bottom;
   border: 1px solid transparent;
 
@@ -410,7 +410,7 @@
   }
 
   .navbar-nav {
-    > li > a {
+    > li > a, button {
       color: @navbar-default-link-color;
 
       &:hover,
