--- a/less/header.less
+++ b/less/header.less
@@ -120,7 +120,7 @@
 	}
 
 	#user_dropdown {
-		padding: 10px 15px;
+		padding: 8px 13px;
 
 		img, .user-icon {
 			.user-icon-style(30px, 1.8rem, 50%);
@@ -245,6 +245,7 @@
 }
 
 .breadcrumb {
+	line-height: 1em;
 	li {
 		max-width: 100%;
 		.text-ellipsis;
@@ -254,10 +255,6 @@
 		margin-left: 10px;
 		color: rgb(153, 153, 153);
 	}
-
-	font-size: 16px;
-	padding: 0;
-	background: none;
 
 	@media (max-width: @screen-sm-max) {
 		li {
