--- a/less/modules/nprogress.less
+++ b/less/modules/nprogress.less
@@ -3,7 +3,7 @@
 }
 
 #nprogress .bar {
-  background: #29d;
+  //background: #29d;
 
   position: fixed;
   z-index: 1031;
@@ -77,4 +77,3 @@
   0%   { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-
