--- a/less/search.less
+++ b/less/search.less
@@ -17,6 +17,10 @@
 	h4, p {
 		overflow-y: hidden;
 	}
+
+	img{
+		max-height: 250px;
+	}
 }
 
 .topic-search {
@@ -28,4 +32,3 @@
 		padding: 4px 6px;
 	}
 }
-
